// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryModal should render empty state 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw fWjEmW absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxirZ eUzagL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          History
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col mt-5"
          >
            <div
              class="sc-Axmtr idwkoD self-center"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Type
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Date
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Transaction
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                />
              </table>
            </div>
            <div
              class="self-center mt-2"
            >
              <div
                class="sc-AxhCb etDdhz"
                data-testid="Pagination"
              >
                <div
                  class="flex items-center px-5 py-3 rounded bg-theme-primary-contrast text-theme-primary"
                >
                  Page 1 of 3
                </div>
                <button
                  class="sc-AxirZ jCYjLj w-8"
                  color="primary"
                  data-testid="CompactPagination__next"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      forward.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="sc-AxirZ jCYjLj w-8"
                  color="primary"
                  data-testid="CompactPagination__last"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      pagination-last.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HistoryModal should render properly 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw fWjEmW absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxirZ eUzagL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          History
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col mt-5"
          >
            <div
              class="sc-Axmtr idwkoD self-center"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Type
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Date
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Transaction
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Registration
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        27 May 2020
                      </span>
                    </td>
                    <td
                      class="flex items-center justify-end py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Update
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        18 May 2020
                      </span>
                    </td>
                    <td
                      class="flex items-center justify-end py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Update
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        3 May 2020
                      </span>
                    </td>
                    <td
                      class="flex items-center justify-end py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Resign
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        15 Jun 2020
                      </span>
                    </td>
                    <td
                      class="flex items-center justify-end py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="self-center mt-2"
            >
              <div
                class="sc-AxhCb etDdhz"
                data-testid="Pagination"
              >
                <div
                  class="flex items-center px-5 py-3 rounded bg-theme-primary-contrast text-theme-primary"
                >
                  Page 1 of 3
                </div>
                <button
                  class="sc-AxirZ jCYjLj w-8"
                  color="primary"
                  data-testid="CompactPagination__next"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      forward.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="sc-AxirZ jCYjLj w-8"
                  color="primary"
                  data-testid="CompactPagination__last"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      pagination-last.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
